--- a/EAITEST.vcxproj.filters
+++ b/EAITEST.vcxproj.filters
@@ -21,5 +21,13 @@
     <ClCompile Include="LoadEAIDll.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Robot.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Robot.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
